nginx-deployment.yaml
# nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: tls-certs
          mountPath: "/etc/nginx/ssl"
          readOnly: true
        - name: nginx-config
          mountPath: "/etc/nginx/nginx.conf"
          subPath: nginx.conf
      volumes:
      - name: tls-certs
        secret:
          secretName: nginx-tls-secret
      - name: nginx-config
        configMap:
          name: nginx-config
