nginx-service.yaml
# nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
      nodePort: 30080
    - protocol: TCP
      name: https
      port: 443
      targetPort: 443
      nodePort: 30443
  type: NodePort
